# paperCrop

./: CBZwriter.lua  CMakeLists.txt  DevelopersWiki.wiki  GlobalUI.cpp  GlobalUI.h  ImageSegmentation.cpp  ImageSegmentation.h  Makefile  NullOutputDev.h  PDFWriter.cpp  PDFWriter.h  PDFwin.cpp  PDFwin.h  PaperCrop.cpp  PaperCrop.h  PaperCrop.lua  PaperCrop.rc  README.md  ReadMe.txt  Resource.h  RightPanel.cpp  RightPanel.h  SplashMod.h  User_wiki.wiki  build.sh  build_debug.sh  clean_build.sh  clean_build2.sh  clean_build_fedora.sh  config.lua  fedora_installer.sh  filechooser_wx.py  install_dependencies_ubuntu.sh  luabindWorker.h  luna.cpp  luna.h  luna_baselib.lua  luna_gen.lua  luna_mainlib.lua  main.lua  (+11 more)
WrapperLua/: BaselibLUA.cpp  BaselibLUA.h  BaselibLUA2.cpp  BaselibLUA2.h  BaselibLUA3.h  LUAwrapper.h  MainlibLUA.cpp  MainlibLUA.h
WrapperLua/.svn/: all-wcprops  entries
WrapperLua/.svn/text-base/: BaselibLUA3.cpp.svn-base  LUAwrapper.cpp.svn-base  OR_LUA_Stack.cpp.svn-base  OR_LUA_Stack.h.svn-base  OR_LUA_Stack.h~.svn-base  lunar.h.svn-base
image/: Image.cpp  Image.h  ImagePixel.cpp  ImagePixel.h  ImageProcessor.cpp  ImageProcessor.h
luabind-0.9/: CMakeLists.txt
luabind-0.9/.svn/: all-wcprops  entries
luabind-0.9/luabind/.svn/: all-wcprops  entries
luabind-0.9/luabind/detail/.svn/: all-wcprops  entries
luabind-0.9/src/.svn/: all-wcprops  entries
luabind-0.9/test/.svn/: all-wcprops  entries
math/: Operator.cpp  Operator.h  bitVectorN.cpp  bitVectorN.h  interval.cpp  interval.h  intervals.cpp  intervals.h  math_macro.h  mathclass.h  matrix.cpp  matrix.h  matrix3.cpp  matrix3.h  matrix_n.cpp  matrix_n.h  operatorTemplate.hpp  quater.cpp  quater.h  quaterN.cpp  quaterN.h  template_math.h  template_matrix.h  traits.h  transf.cpp  transf.h  tvector.cpp  tvector.h  vector.cpp  vector.h  vector3N.cpp  vector3N.h  vector_n.cpp  vector_n.h
pdfCrop/: PdfCrop.java  build_pdfCrop.sh
pdfCrop/lib/.svn/: all-wcprops  entries
presets/: one-column papers (landscape).lua  one-column papers (reflow mode).lua  one-column papers.lua  slides.lua  two-column papers (landscape).lua  two-column papers (portrait).lua
presets/.svn/: all-wcprops  entries
presets/.svn/text-base/: default preset.lua.svn-base  one-column papers (reflow mode).lua.svn-base  one-column papers.lua.svn-base  two-column papers (landscape).lua.svn-base  two-column papers 2 (portrait).lua.svn-base
referencer_plugins/: papercrop.py
resource/.svn/: all-wcprops  entries
resource/default/.svn/: all-wcprops  entries
script/: (landscape) fit images to screen.lua  (landscape) vertical reflow.lua  (landscape) vertical scroll (outputs a single image per page).lua  (portrait) vertical reflow.lua  (portrait) vertical scroll (outputs multiple images).lua
script/.svn/: all-wcprops  entries
script/.svn/text-base/: (landscape) vertical scroll (outputs multiple images).lua.svn-base  (portrait) fit images to screen width.lua.svn-base  (portrait) fit images to screen.lua.svn-base  (portrait) vertical scroll (outputs a single image if not too big).lua.svn-base  (portrait) vertical scroll (outputs a single image per page).lua.svn-base  (portrait) vertical scroll (outputs a single image).lua.svn-base
utility/: FlLayout.cpp  FlLayout.h  FltkAddon.cpp  FltkAddon.h  TextFile.cpp  TypeString.cpp  TypeString.h  namedmapsupport.h  operatorString.cpp  operatorString.h  util.cpp  util.h
